# unity

./: .env.example  .gitignore  2026-06-09-153625-this-session-is-being-continued-from-a-previous-c.txt  BENCHMARKS.md  CHANGES.md  COMPETITIVE_REVIEW.md  FORUM2.md  ISSUES.md  README.md  UNITY.md  changes2.md  changes3.md  install.sh  logss  pyproject.toml  unity-8.out
unity/: README.md  blueprint_extract.lean  cli.py  config.py  interactive.py  lake.py  library.py  orchestrator.py  pyproject.toml  roster.py  spawn.py  worktree.py
unity/commands/: agent.py  autoformalize.py  bump.py  clean.py  complete.py  create.py  doctor.py  formalize.py  help.py  init.py  mcp.py  optimize.py  prove.py  reset.py  serve.py  solve.py  source.py  update.py  verify.py  version.py
unity/defaults/metrics/: completion.md
unity/forum/: server.py  web.py
unity/prompts/: ARCHITECT.md  FORUM_CONTRACT.md  TOOLS.md
unity/prompts/autoformalize/: AUTOFORMALIZING.md  CRITIC.md  EXPLORATION.md  PREPARATION.md  RETROSPECTIVE.md  SEMIFORMALIZATION.md
unity/prompts/bump/: BUMPING.md  CHUNKING.md  CRITIC.md  EXPLORATION.md  PREPARATION.md  RETROSPECTIVE.md  SETVERSION.md
unity/prompts/create/: CHUNKING.md  CREATION.md  CRITIC.md  EXPLORATION.md  FORMALIZING.md  PREPARATION.md  RECHUNKING.md  RECREATION.md  RETROSPECTIVE.md
unity/prompts/formalize/: CRITIC.md  EXPLORATION.md  FORMALIZING.md  PREPARATION.md  RETROSPECTIVE.md  SEMIFORMALIZATION.md
unity/prompts/optimize/: CHUNKING.md  CRITIC.md  EXPLORATION.md  OPTIMIZING.md  PREPARATION.md  RETROSPECTIVE.md
unity/prompts/prove/: CHUNKING.md  CRITIC.md  EXPLORATION.md  PREPARATION.md  PROVING.md  RETROSPECTIVE.md
unity/unity/: aristotle.py  cli.py  config.py  lake.py  library.py  orchestrator.py  roster.py  spawn.py  worktree.py
(+275 files in other folders)
