[project]
name = "unity"
version = "0.1.0"
description = "Multi-agent autoformalization for Lean 4"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncclick>=8.3.0.7",
    "claude-agent-sdk==0.1.59",
    "lean-lsp-mcp>=0.1.0",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "fastmcp>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pyyaml>=6.0",
    "openai-codex",
    "aristotlelib>=2.1.0,<3",
]

[project.scripts]
unity = "unity.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["unity"]
